--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,33 @@
 site_name: SWAT+ Github Documentation
-theme:
-  name: material
 nav:
   - Home: index.md
+  - Setting Up: setup.md
+theme:
+  name: material
+  features:
+    - navigation.tabs
+    - navigation.sections
+    - toc.integrate
+    - navigation.top
+    - search.suggest
+    - search.highlight
+    - content.tabs.link
+    - content.code.annotation
+    - content.code.copy
+  language: en
+  # palette:
+  #   - scheme: default
+  #     toggle:
+  #       icon: material/toggle-switch-off-outline 
+  #       name: Switch to dark mode
+  #     primary: indigo
+  #     accent: purple
+  #   - scheme: slate 
+  #     toggle:
+  #       icon: material/toggle-switch
+  #       name: Switch to light mode    
+  #     # primary: teal
+  #     # accent: lime
+extra_css:
+  - stylesheets/extra.css
+
