--- a/.github/workflows/auto-cherrypick.yml
+++ b/.github/workflows/auto-cherrypick.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUSHER_TOKEN }}
 
       - name: Set Git User
         run: |
